# SDP-Data-Hub

./: CMakeLists.txt  README.md
cmake/: googletest.cmake  grpc.cmake
docker/: build.sh  sdp-base.Dockerfile
script/: docker.sh  install.sh
source/: CMakeLists.txt
source/camera-sensor/: CMakeLists.txt
source/camera-sensor/include/: CameraSensor.hpp
source/camera-sensor/src/: CameraSensor.cpp
source/camera-sensor/test/: main.cpp
source/platform/: CMakeLists.txt
source/platform/include/: Platform.hpp
source/platform/src/: Platform.cpp
source/platform/test/: multi-sensors.cpp
source/sensor/: CMakeLists.txt
source/sensor-interface/: CMakeLists.txt
source/sensor-interface/common/: CMakeLists.txt
source/sensor-interface/common/include/: AbstractSensorInterface.hpp
source/sensor-interface/common/src/: AbstractSensorInterface.cpp
source/sensor-interface/monolith/: CMakeLists.txt
source/sensor-interface/monolith/include/: SensorInterface.hpp
source/sensor-interface/monolith/src/: SensorInterface.cpp
source/sensor-interface/monolith/template/: SensorInterface_impl.hpp
source/sensor-interface/monolith/test/: main.cpp
source/sensor/camera-sensor/: CMakeLists.txt
source/sensor/camera-sensor/include/: AbstractCameraSensor.hpp  SimulatedCameraSensor.hpp  SimulatedRgbCamera.hpp
source/sensor/camera-sensor/proto/: camera-sensor.proto
source/sensor/camera-sensor/src/: AbstractCameraSensor.cpp  GrpcServer.cpp  SimulatedCameraSensor.cpp  SimulatedRgbCamera.cpp  grpcMain.cpp
source/sensor/camera-sensor/template/: AbstractCameraSensor_impl.hpp
source/sensor/camera-sensor/test/: GrpcClient.cpp  main.cpp  test.cpp
source/sensor/common/: CMakeLists.txt
source/sensor/common/include/: AbstractSensor.hpp  Frequency.hpp
source/sensor/common/proto/: sensor.proto
source/sensor/common/template/: AbstractSensor_impl.hpp
source/utils/: CMakeLists.txt
source/utils/include/: AtomicPtrSwap.hpp  Utils.hpp
source/utils/src/: AtomicPtrSwap.cpp  Utils.cpp
